<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Wallpaper &amp; style</string>
    <string name="theme_title">Style</string>
    <string name="clock_title">Clock</string>
    <string name="clock_description">Pick a custom clock</string>
    <string name="clock_picker_entry_content_description">Change a custom clock</string>
    <string name="select_clock_action_description">Clock face option <xliff:g name="clock_face_description">%1$s</xliff:g></string>
    <string name="clock_settings_title">Clock color &amp; size</string>
    <string name="clock_color_and_size_title">Clock color &amp; size</string>
    <string name="clock_color_and_size_description"><xliff:g name="color">%1$s</xliff:g>, <xliff:g name="size">%2$s</xliff:g></string>
    <string name="clock_style">Style</string>
    <string name="clock_color">Color</string>
    <string name="clock_color_title">Clock color</string>
    <string name="clock_color_description">Match the wallpaper theme or choose your own color</string>
    <string name="clock_color_red">Red</string>
    <string name="clock_color_orange">Orange</string>
    <string name="clock_color_yellow">Yellow</string>
    <string name="clock_color_green">Green</string>
    <string name="clock_color_blue">Blue</string>
    <string name="clock_color_indigo">Indigo</string>
    <string name="clock_color_violet">Violet</string>
    <string name="clock_color_gray">Grey</string>
    <string name="clock_color_teal">Teal</string>
    <string name="clock_size">Size</string>
    <string name="clock_size_dynamic">Dynamic</string>
    <string name="clock_size_dynamic_description">Clock size changes according to lock screen content</string>
    <string name="clock_size_large">Large</string>
    <string name="clock_size_large_description">Shown when notifications aren\'t visible</string>
    <string name="clock_size_small">Small</string>
    <string name="clock_size_small_description">A small clock shows in the corner of your screen</string>
    <string name="clock_font_editor_apply">Apply clock font changes</string>
    <string name="clock_font_editor_revert">Undo clock font changes</string>
    <string name="clock_style_round_clock">Round clock</string>
    <string name="clock_style_sharp_clock">Sharp clock</string>
    <string name="change_clock_style_content_description"><xliff:g name="clock_style" example="Round clock">%1$s</xliff:g>. Tap to change clock style.</string>
    <string name="clock_style_update_toast">Style changed to <xliff:g name="font_name">%1$s</xliff:g>. Tap again to undo.</string>
    <string name="clock_style_round">round</string>
    <string name="clock_style_sharp">sharp</string>
    <string name="grid_title">App grid</string>
    <string name="shape_and_grid_title">App shape &amp; layout</string>
    <string name="grid_layout">Layout</string>
    <string name="app_icons_title">Icons</string>
    <string name="app_icons_description"><xliff:g name="shape">%1$s</xliff:g>, <xliff:g name="theme">%2$s</xliff:g></string>
    <string name="app_icons_theme_default">default</string>
    <string name="app_icons_theme_themed">themed</string>
    <string name="app_icons_style_default">Default</string>
    <string name="app_icons_style_minimal">Minimal</string>
    <string name="app_icons_shape">Shape</string>
    <string name="app_labels">App labels</string>
    <string name="app_names">Names</string>
    <string name="show_app_names">Show app names</string>
    <string name="app_icons_style">Style</string>
    <string name="apply_theme_btn">Apply</string>
    <string name="edit_custom_theme_lbl">Tap to edit</string>
    <string name="keep_my_wallpaper">Keep current wallpaper</string>
    <string name="theme_preview_card_content_description">Style preview</string>
    <string name="grid_preview_card_content_description">Grid preview</string>
    <string name="font_preview_content_description">Font preview</string>
    <string name="icon_preview_content_description">Icon preview</string>
    <string name="color_preview_content_description">Color preview</string>
    <string name="shape_preview_content_description">Shape preview</string>
    <string name="option_applied_description"><xliff:g name="style_name">%1$s</xliff:g>, currently applied</string>
    <string name="option_applied_previewed_description"><xliff:g name="style_name">%1$s</xliff:g>, currently applied and previewed</string>
    <string name="option_previewed_description"><xliff:g name="style_name">%1$s</xliff:g>, currently previewed</string>
    <string name="option_change_applied_previewed_description"><xliff:g name="style_name">%1$s</xliff:g>, change selected and previewed</string>
    <string name="theme_font_example" translatable="false">ABC</string>
    <string name="theme_description">Font: <xliff:g name="font_name">%1$s</xliff:g>, icons: <xliff:g name="icon_name">%2$s</xliff:g>, shape: <xliff:g name="shape_name">%3$s</xliff:g>, color: <xliff:g name="color_name">%4$s</xliff:g> </string>
    <string name="default_theme_title">Default</string>
    <string name="preview_name_font">Font</string>
    <string name="preview_name_icon">Icon</string>
    <string name="preview_name_color">Color</string>
    <string name="preview_name_shape">Shape</string>
    <string name="preview_name_wallpaper">Wallpaper</string>
    <string name="font_card_title">ABC • abc • 123</string>
    <string name="font_card_body">Add your favorite fonts to every screen</string>
    <string name="grid_options_title">Choose a grid size</string>
    <string name="grid_title_pattern"><xliff:g name="num_cols" example="1">%1$d</xliff:g>x<xliff:g name="num_rows" example="1">%2$d</xliff:g></string>
    <string name="grid_content_description"><xliff:g name="num_cols" example="1">%1$d</xliff:g> by <xliff:g name="num_rows" example="1">%2$d</xliff:g></string>
    <string name="apply_grid_btn_note">Changing grid size will reload workspace and may take a few seconds.</string>
    <string name="toast_of_changing_grid">Reloading workspace with %1$s grid</string>
    <string name="toast_of_failure_to_change_grid">Failed to reload workspace with %1$s grid</string>
    <string name="applied_theme_msg">Style set successfully</string>
    <string name="applied_clock_msg">Clock set successfully</string>
    <string name="applied_grid_msg">Grid set successfully</string>
    <string name="apply_theme_error_msg">There was a problem applying the style</string>
    <string name="custom_theme_next">Next</string>
    <string name="custom_theme_previous">Previous</string>
    <string name="custom_theme">Custom</string>
    <string name="custom_theme_title">Custom <xliff:g name="custom_num" example="1">%1$d</xliff:g></string>
    <string name="custom_theme_fragment_title">Custom Style</string>
    <string name="custom_theme_delete">Delete</string>
    <string name="font_component_title">Choose font</string>
    <string name="icon_component_title">Choose icons</string>
    <string name="color_component_title">Choose color</string>
    <string name="shape_component_title">Choose shape</string>
    <string name="name_component_title">Name your style</string>
    <string name="icon_component_label">Icons <xliff:g name="component_number" example="1">%1$d</xliff:g></string>
    <string name="font_component_option_thumbnail" translatable="false">Aa</string>
    <string name="delete_custom_theme_confirmation">Delete Custom style?</string>
    <string name="delete_custom_theme_button">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="set_theme_wallpaper_dialog_message">Set style wallpaper</string>
    <string name="use_style_instead_title">Use <xliff:g name="style_name">%1$s</xliff:g> instead?</string>
    <string name="use_style_instead_body">The components you chose match the <xliff:g name="style_name">%1$s</xliff:g> style. Do you want to use <xliff:g name="style_name">%1$s</xliff:g> instead?</string>
    <string name="use_style_button">Use <xliff:g name="style_name">%1$s</xliff:g></string>
    <string name="no_thanks">No, thanks</string>
    <string name="clock_preview_content_description"><xliff:g name="clock_name">%1$s</xliff:g> clock preview</string>
    <string name="something_went_wrong">Oops! Something went wrong.</string>
    <string name="theme_preview_icons_section_title">Color / Icons</string>
    <string name="style_info_description">Preview of font, icons, app shape, and color</string>
    <string name="accessibility_custom_font_title">Custom font</string>
    <string name="accessibility_custom_icon_title">Custom icon</string>
    <string name="accessibility_custom_color_title">Custom color</string>
    <string name="accessibility_custom_shape_title">Custom shape</string>
    <string name="accessibility_custom_name_title">Custom style name</string>
    <string name="accessibility_clock_slider_description">Color intensity</string>
    <string name="themed_icon_metadata_key" translatable="false">com.android.launcher3.themedicon.option</string>
    <string name="mode_title" msgid="1000319159005403986">Dark theme</string>
    <string name="mode_disabled_msg" msgid="1926077857799715086">Temporarily disabled due to Battery Saver</string>
    <string name="themed_icon_title" msgid="4305612684940220645">Themed icons</string>
    <string name="themed_icon_beta_title">Themed icons (beta)</string>
    <string name="beta_title">Beta</string>
    <string name="gird_picker_entry_content_description" msgid="7538418512525897691">Change app grid</string>
    <string name="wallpaper_color_tab">Wallpaper colors</string>
    <string name="wallpaper_color_subheader">Icons, text, and more match colors in your wallpaper</string>
    <string name="wallpaper_color_title">Wallpaper color</string>
    <string name="preset_color_tab">Basic colors</string>
    <string name="preset_color_tab_2">Other colors</string>
    <string name="preset_color_subheader">Choose any color for your icons, clock, and more</string>
    <string name="color_changed">Color changed</string>
    <string name="adaptive_color_title">Dynamic</string>
    <string name="freeform_color_title">Your colors</string>
    <string name="wallpaper_color_title_2">Your wallpaper colors</string>
    <string name="cmf_color_title">Hardware colors</string>
    <string name="color_picker_title">System colors</string>
    <string name="system_colors_title">Colors</string>
    <string name="screen_saver_title">Screen saver</string>
    <string name="keyguard_slot_name_bottom_start">Left shortcut</string>
    <string name="keyguard_slot_name_bottom_end">Right shortcut</string>
    <string name="keyguard_affordance_none">None</string>
    <string name="keyguard_affordance_enablement_dialog_headline">Can\'t add shortcut</string>
    <string name="keyguard_affordance_enablement_dialog_action_template">Open <xliff:g id="appName" example="Wallet">%1$s</xliff:g></string>
    <string name="keyguard_affordance_enablement_dialog_message">To add the <xliff:g id="appName" example="Wallet">%1$s</xliff:g> app as a shortcut, make sure</string>
    <string name="keyguard_affordance_enablement_dialog_dismiss_button">Done</string>
    <string name="keyguard_quick_affordance_title">Shortcuts</string>
    <string name="keyguard_quick_affordance_section_title">Shortcuts</string>
    <string name="color_contrast_section_title">Color contrast</string>
    <string name="color_contrast_default_title">Default</string>
    <string name="color_contrast_medium_title">Medium</string>
    <string name="color_contrast_high_title">High</string>
    <string name="keyguard_quick_affordance_two_selected_template"><xliff:g id="first">%1$s</xliff:g>, <xliff:g id="second">%2$s</xliff:g></string>
    <string name="keyguard_quick_affordance_none_selected">None</string>
    <string name="show_notifications_on_lock_screen">Show notifications on the lock screen</string>
    <string name="lock_screen_notifications_section_title">Notifications on lock screen</string>
</resources>